get exporting working by overriding expm1

--- a/toymodel/public/model.html
+++ b/toymodel/public/model.html
@@ -10,7 +10,7 @@
             <select name="prompt" id="prompt" disabled="true">
               <option value="truck">truck</option>
               <option value="bird">bird</option>
-              <option value="airplanes">airplanes</option>
+              <option value="airplane">airplane</option>
               <option value="horse">horse</option>
               <option value="dog">dog</option>
               <option value="cat">cat</option>
